[web]Mod: issue #6009 duplicate select property type to hidden tags on mobile

--- a/source/web/src/static/styles/property_to_rent_list.less
+++ b/source/web/src/static/styles/property_to_rent_list.less
@@ -175,7 +175,7 @@ main {
 
             }
 
-            .rentalBudget, .rentPeriod, .bedroomCount, .space {
+            .propertyType, .rentalBudget, .rentPeriod, .bedroomCount, .space {
                 margin: 0;
                 border-top: 1px solid #ccc;
                 display:block;
